--- a/public/stylesheets/StudentProfile.css
+++ b/public/stylesheets/StudentProfile.css
@@ -1,18 +1,64 @@
-/*body {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
-    display: flex;
+body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+  /* display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-   /* height: 100vh;
-    margin: 0;
-  }*/
+   /* height: 100vh;*/
+
+}
+
+.sidebar {
+  height: 100%;
+  width: 250px;
+  position: fixed;
+  background-color: #111;
+  padding-top: 20px;
+}
+
+.sidebar img {
+  display: block;
+  margin: 0px auto;
+
+}
+
+.sidebar nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.sidebar nav a {
+  display: block;
+  padding: 15px;
+  text-decoration: none;
+  color: white;
+  font-size: 18px;
+  border-bottom: 1px solid #444;
+}
+
+.sidebar nav a:hover {
+  background-color: #555;
+}
+
+.fa-regular {
+  color: white;
+}
+
+.logo img {
+  border-radius: 50%;
+}
+
+.fa-solid {
+  margin-right: 4px;
+}
 
 .container {
   text-align: center;
+  padding: 7px;
+  margin: 7px;
 }
 
 input {
@@ -41,7 +87,17 @@ input {
   margin: 10px;
   width: 40%;
 }
+.locationSelect{
+  padding: 7px;
+/*  margin-right: 5px;*/
+  border: 1px solid black;
+  border-radius: 5px;
 
+  /* border: none;*/
+  outline: none;
+  margin: 10px;
+  width: 15%;
+}
 label {
   float: left;
   margin-left: 100px;
@@ -53,9 +109,9 @@ label {
   color: white;
   border-radius: 5px;
   padding: 10px 20px 10px 20px;
-  margin: 10px 10px 10px 100px;
+  margin: 10px 40px 10px 100px;
   border: none;
-  /* float: right;*/
+   float: right;
 }
 
 button {
@@ -78,9 +134,11 @@ button {
 #saveSummaryBtn,
 #saveWebsiteBtn,
 #saveGithubBtn,
-#saveLinkedInBtn
-#saveWorkBtn
-#saveTwitterBtn {
+#saveLinkedInBtn,
+#saveWorkBtn,
+#saveTwitterBtn,
+#saveSkillsBtn,
+#saveEducationBtn {
   display: none;
   background-color: rgb(133, 178, 236);
   color: white;
@@ -98,7 +156,9 @@ button {
 #cancelGithubBtn,
 #cancelLinkedInBtn,
 #cancelWorkBtn,
-#cancelTwitterBtn {
+#cancelTwitterBtn,
+#cancelSkillsBtn,
+#cancelEducationBtn {
   display: none;
   background-color: rgb(243, 111, 111);
   border: none;
@@ -109,7 +169,7 @@ button {
 }
 
 .upperDiv {
-  width: 82%;
+  width: 100%;
   height: 48vh;
   float: right;
   background-color: #555;
@@ -129,22 +189,21 @@ button {
   cursor: pointer;
 }
 
-/*.upperDiv h3{
-  margin: 0;
- /* padding: -20px;
-  color: white;
-}*/
-.parentContainer {
-  width: 65%;
-  box-shadow: 0 0 10px rgba(94, 90, 90, 0.1);
-  background-color: rgb(238, 242, 245);
-  /*margin-top: -50px;
-  margin-right: 300px;
-  margin-left: 20px;*/
+.rightdiv {
+  width: 82%;
   float: right;
+}
+
+.parentContainer {
+  width: 90%;
+  box-shadow: 10px 0px 10px rgba(219, 221, 197, 0.5);
+  background-color: rgb(251, 253, 227);
   display: flex;
   flex-direction: column;
-
+  box-sizing: border-box;
+  margin: -20px auto 0px auto;
+  padding: auto;
+  border-radius: 20px;
 }
 
 .parentContainer h3 {
