--- a/views/StudentProfile.ejs
+++ b/views/StudentProfile.ejs
@@ -194,20 +194,20 @@
     <h3>Academic Details</h3>
     <div class="container">
       <label for="course">Course</label>
-      <input type="text" id="editableInput" placeholder="Academic Detail" disabled>
-      <button class="editBtn" id="editBtn" onclick="enableEdit()">Edit</button>
-      <button id="saveBtn" onclick="saveChanges()">Save</button>
-      <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+      <input type="text" id="editableCourse" placeholder="Academic Detail" disabled>
+      <button class="editBtn" id="editCourseBtn" onclick="enableCourseEdit()">Edit</button>
+      <button id="saveCourseBtn" onclick="saveCourseChanges()">Save</button>
+      <button id="cancelCourseBtn" onclick="cancelCourseEdit()">Cancel</button>
     </div>
     <div class="horizontal">
       <hr>
     </div>
     <div class="container">
       <label for="1stSemCGPA">1st Semester CGPA</label>
-      <input type="text" id="editableInput" placeholder="Your CGPA" disabled>
-      <button class="editBtn" id="editBtn" onclick="enableEdit()">Edit</button>
-      <button id="saveBtn" onclick="saveChanges()">Save</button>
-      <button id="cancelBtn" onclick="cancelEdit()">Cancel</button>
+      <input type="text" id="editableCGPA" placeholder="Your CGPA" disabled>
+      <button class="editBtn" id="editCGPABtn" onclick="enableCGPAEdit()">Edit</button>
+      <button id="saveCGPABtn" onclick="saveCGPAChanges()">Save</button>
+      <button id="cancelCGPABtn" onclick="cancelCGPAEdit()">Cancel</button>
     </div>
   </div>
 </div>
