--- a/views/StudentProfile.ejs
+++ b/views/StudentProfile.ejs
@@ -49,7 +49,7 @@
 
     <div class="container">
       <label for="gender">Gender</label>
-      <select id="inputGender" disabled">
+      <select id="inputGender" disabled>
         <option value="select">Select...</option>
         <option value="Male">Male</option>
         <option value="Female">Female</option>
