Loaded data from database

--- a/public/stylesheets/Dashboard.css
+++ b/public/stylesheets/Dashboard.css
@@ -83,4 +83,10 @@ body {
 } 
 .jobs{
   color: black;
-}                                
+}       
+.main-content{
+  width: 50%;
+  float: right;
+  height: 100%;
+ /* background-color: #333;*/
+}                         
