Fetched student detail

--- a/views/AdminDashBoard.ejs
+++ b/views/AdminDashBoard.ejs
@@ -22,7 +22,7 @@
         <li><a href="#"><i class="fa-solid fa-gauge-simple-high"></i>Dashboard</a></li>
         <li><a href="#"><i class="fa-solid fa-suitcase"></i>Job</a></li>
         <li class="popup-trigger"><a href="#"><i class="fa-solid fa-share-from-square"></i>Post</a></li>
-        <li><a href="#"><i class="fa-solid fa-users"></i></i>Students Detail</a></li>
+        <li><a href="StudentDetails"><i class="fa-solid fa-users"></i></i>Students Detail</a></li>
       </ul>
       <div class="popup" id="popupForm">
         <div class="popup-content">
