--- a/views/AdminDashBoard.ejs
+++ b/views/AdminDashBoard.ejs
@@ -58,9 +58,8 @@
     </div>
   </div>
   <!--Main Content-->
-  <h1>Recent Posts</h1>
-  <div class="main-content">
-    <h1>Job Listings</h1>
+    <div class="main-content">
+      <h1>Recent Job Posts</h1>
   <ul>
     <% jobs.forEach(job => { %>
       <li>
