Completed Resume building section

--- a/views/Resume.ejs
+++ b/views/Resume.ejs
@@ -7,15 +7,15 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- custom css -->
-        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="/stylesheets/Resume.css">
     </head>
     <body>
         <nav class = "navbar bg-white">
             <div class="container">
                 <div class = "navbar-content">
                     <div class = "brand-and-toggler">
-                        <a href = "index.html" class = "navbar-brand">
-                            <img src = "assets/images/curriculum-vitae.png" alt = "" class = "navbar-brand-icon">
+                        <a href = "/student/ResumeFrontPage" class = "navbar-brand">
+                            <img src = "/images/curriculum-vitae.png" alt = "" class = "navbar-brand-icon">
                             <span class = "navbar-brand-text">build <span>resume.</span>
                         </a>
                         <button type = "button" class = "navbar-toggler-btn">
@@ -383,8 +383,8 @@
         <!-- jquery repeater cdn -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.repeater/1.2.1/jquery.repeater.js" integrity="sha512-bZAXvpVfp1+9AUHQzekEZaXclsgSlAeEnMJ6LfFAvjqYUVZfcuVXeQoN5LhD7Uw0Jy4NCY9q3kbdEXbwhZUmUQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <!-- custom js -->
-        <script src = "assets/js/script.js"></script>
+        <script src = "/javascripts/resume.js"></script>
         <!-- app js -->
-        <script src="assets/js/app.js"></script>
+        <script src="/javascripts/script.js"></script>
     </body>
 </html>
