--- a/views/StudentDashboard.ejs
+++ b/views/StudentDashboard.ejs
@@ -21,17 +21,10 @@
         <li><a href="#"><i class="fa-solid fa-gauge-simple-high"></i>Dashboard</a></li>
         <li><a href="#"><i class="fa-solid fa-suitcase"></i>Job</a></li>
         <li><a href="/student/StudentProfile"><i class="fa-solid fa-user"></i>Profile</a></li>
-        <li><a href="#"><i class="fa-solid fa-regular fa-file"></i>Resume Building</a></li>
+        <li><a href="/student/ResumeFrontPage"><i class="fa-solid fa-regular fa-file"></i>Resume Building</a></li>
       </ul>
       <div class="main-content">
-        <% job.forEach(jobs => { %>
-          <div class="job-item">
-            <h3><%= jobs.companyName %></h3>
-            <p>Location: <%= jobs.location %></p>
-            <p>Role: <%= jobs.jobRole %></p>
-           
-          </div>
-        <% }); %>
+       
       </div>
     </nav>
   </div>
