--- a/views/Resume.ejs
+++ b/views/Resume.ejs
@@ -18,13 +18,13 @@
                             <img src = "/images/curriculum-vitae.png" alt = "" class = "navbar-brand-icon">
                             <span class = "navbar-brand-text">build <span>resume.</span>
                         </a>
-                        <button type = "button" class = "navbar-toggler-btn">
+                      <!-- <button type = "button" class = "navbar-toggler-btn">
                             <div class = "bars">
                                 <div class = "bar"></div>
                                 <div class = "bar"></div>
                                 <div class = "bar"></div>
                             </div>
-                        </button>
+                        </button> --> 
                     </div>
                 </div>
             </div>
