--- a/views/ResumeFrontPage.ejs
+++ b/views/ResumeFrontPage.ejs
@@ -18,13 +18,13 @@
                             <img src = "/images/curriculum-vitae.png" alt = "" class = "navbar-brand-icon">
                             <span class = "navbar-brand-text">build <span>resume.</span>
                         </a>
-                        <button type = "button" class = "navbar-toggler-btn">
+                       <!-- <button type = "button" class = "navbar-toggler-btn">
                             <div class = "bars">
                                 <div class = "bar"></div>
                                 <div class = "bar"></div>
                                 <div class = "bar"></div>
                             </div>
-                        </button>
+                        </button> -->
                     </div>
                 </div>
             </div>
@@ -95,7 +95,7 @@
         <footer class = "footer bg-dark">
             <div class="container">
                 <div class = "footer-content text-center">
-                    <p class="fs-15">&copy;Copyright 2022. All Rights Reserved - <span>build.resume</span></p>
+                    <p class="fs-15">&copy;University Placement Cell. All Rights Reserved - <span>build.resume</span></p>
                 </div>
             </div>
         </footer>
