--- a/views/StudentDetails.ejs
+++ b/views/StudentDetails.ejs
@@ -15,7 +15,7 @@
         <h2><%= user.name %></h2>
         <p>Registration Number: <%= user.regNo %></p>
         <p>Email: <%= user.email %></p>
-      
+      <!-- Comment -->
       </li>
     <% }); %>
   </ul>
