--- a/views/mid.ejs
+++ b/views/mid.ejs
@@ -15,7 +15,7 @@
         <select id="page-select">
             <option value="/student/StudentRegister">Student</option>
             <option value="/admin/AdminRegister">Admin</option>
-            <option value="/CompanyRegister">Company</option>
+            <option value="/company/CompanyRegister">Company</option>
         </select>
     </div>
 
