--- a/views/StudentProfile.ejs
+++ b/views/StudentProfile.ejs
@@ -5,9 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/stylesheets/StudentProfile.css">
-
-
-
   <script src="https://kit.fontawesome.com/4800d7071c.js" crossorigin="anonymous"></script>
   <title>Student Profile</title>
 </head>
@@ -32,7 +29,7 @@
     <img src="/images/Anjana.jpg" alt="Display picture" width="120" height="150">
 
   </div>
-  <div class="parentContainer">
+  <form action="/student/StudentDetail" method="post">
     <h3>Basic Information</h3>
     <div class="container">
       <label for="name">Name</label>
@@ -234,6 +231,8 @@
     </div>-->
   </div>
 </div>
+</form>
+<div class="parentContainer">
   <script src="/javascripts/StudentProfile.js"></script>
   <script src="/javascripts/location.js"></script>
 
