--- a/views/CompanyDashBoard.ejs
+++ b/views/CompanyDashBoard.ejs
@@ -4,80 +4,40 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/stylesheets/Dashboard.css">
-  <link rel="stylesheet" href="/stylesheets/jobPostPopUp.css">
-
+  <link rel="stylesheet" href="/stylesheets/companyDashboard.css">
   <script src="https://kit.fontawesome.com/4800d7071c.js" crossorigin="anonymous"></script>
-  <title>Your University</title>
+  <title>Company Dashboard</title>
 </head>
 
 <body>
-  <div class="sidebar">
+  <div class="navbar">
     <div class="logo">
       <img src="/images/logoPU.jpg" alt="University Logo" width="50" height="50">
     </div>
-    <nav>
-  <!--   <ul>
-        <li><a href="#"><i class="fa-solid fa-gauge-simple-high"></i>Dashboard</a></li>
-        <li><a href="#"><i class="fa-solid fa-suitcase"></i>Students Details</a></li>
-        <li class="popup-trigger"><a href="#"><i class="fa-solid fa-share-from-square"></i>Recommendations</a></li>
-    <li><a href="#"><i class="fa-solid fa-users"></i></i>Students Detail</a></li>
-      </ul>
-      <div class="popup" id="popupForm">
-        <div class="popup-content">
-          <span class="close" id="closePopup"><i class="fa-solid fa-circle-xmark"></i></span>
-      
-          <form action="/admin/AdminDashBoard" method="post">
-            <input type="text" id="company-name" name="companyName" required placeholder="Comapany Name">
-            <input type="text" id="location" name="location" required placeholder="Location">
-            <input type="text" id="job-role" name="jobRole" required placeholder="Job Role">
-            <input type="text" id="salary" name="salary" required placeholder="Salary">
-            <input type="text" id="eligiblity" name="eligibility" required placeholder="Eligiblity">
-            <input type="text" id="job-description" name="jobDesc" required placeholder="Job Description">
-            <input type="text" id="apply-link" name="applyLink" required placeholder="Apply Link">
-            <input type="date" id="date" name="lastDate" required>
-            <button type="submit">Post Job</button>
-          </form>
-        </div>
-      </div>
-    </nav>
-  </div>--> 
-  <div class="navbar">
-    <div class="search-box">
-      <input type="text" placeholder="Search...">
-    </div>
     <div class="right-item">
       <div class="notification">
-        <a href="#notificaion"><i class="fa-regular fa-bell fa-2x"></i></a>
-
+        <a href="#notification"><i class="fa-regular fa-bell fa-2x"></i></a>
       </div>
-      <div class="profile">
+    <!--  <div class="profile">
         <img class="profile-img" src="university_logo.png" width="35" height="35">
-      </div>
+      </div>  -->
     </div>
   </div>
-  <!--Main Content
-  <h1>Recent Posts</h1>
-  <div>
-    <% if (Array.isArray(jobs) && jobs.length > 0) { %>
-      <% jobs.forEach(job => { %>
-        <div class="job-post">
-          <h2><%= job.companyName %></h2>
-          <p>Location: <%= job.location %></p>
-          <p>Job Role: <%= job.jobRole %></p>
-          <p>Salary: $<%= job.salary %></p>
-          <p>Description: <%= job.jobDesc %></p>
-          <p>Apply Link: <a href="<%= job.applyLink %>" target="_blank">Apply Now</a></p>
-          <p>Last Date: <%= job.lastDate.toISOString().split('T')[0] %></p>
-        </div>
-      <% }); %>
-    <% } else { %>
-      <p>No jobs available</p>
-    <% } %>
-  </div>-->
 
-  <script src="/javascripts/jobPostPopUp.js"></script>
+  <div class="buttons">
+    <button onclick="getStudentDetails()">Get Student Details</button>
+    <button onclick="openResumeMatcher()">Resume Matcher</button>
+  </div>
 
+  <script>
+    function getStudentDetails() {
+      console.log("Getting student details...");
+    }
+
+    function openResumeMatcher() {
+      console.log("Opening resume matcher...");
+    }
+  </script>
 </body>
 
 </html>
