Company module updated

--- a/public/stylesheets/Dashboard.css
+++ b/public/stylesheets/Dashboard.css
@@ -85,8 +85,9 @@ body {
   color: black;
 }       
 .main-content{
-  width: 50%;
+  width: 79%;
   float: right;
   height: 100%;
+  margin-left: 200px;
  
 }                         
