--- a/views/CompanyDashBoard.ejs
+++ b/views/CompanyDashBoard.ejs
@@ -18,9 +18,6 @@
       <div class="notification">
         <a href="#notification"><i class="fa-regular fa-bell fa-2x"></i></a>
       </div>
-    <!--  <div class="profile">
-        <img class="profile-img" src="university_logo.png" width="35" height="35">
-      </div>  -->
     </div>
   </div>
 
@@ -30,8 +27,14 @@
   </div>
 
   <script>
-    function getStudentDetails() {
+    async function getStudentDetails() {
       console.log("Getting student details...");
+      const response = await fetch('/admin/StudentDetails');
+      console.log('done');
+      const data = await response.json();
+      console.log('-------------------------------------------------------');
+      console.log(data);
+
     }
 
     function openResumeMatcher() {
